--- a/admin/codetemplates/j_3_4_standard/com_architectcomp_j34standard/admin/language/en-GB/en-GB.com_architectcomp.ini
+++ b/admin/codetemplates/j_3_4_standard/com_architectcomp_j34standard/admin/language/en-GB/en-GB.com_architectcomp.ini
@@ -758,4 +758,8 @@ JHELP_COMPONENTS_[%%ARCHITECTCOMP%%]_CATEGORY_EDIT="Components_Content_Categorie
 [%%COM_ARCHITECTCOMP%%]_DASHBOARD_RELEASE="[%%ArchitectComp_name%%] [%%COMPONENTSTARTVERSION%%]"
 [%%COM_ARCHITECTCOMP%%]_VIEW_DASHBOARD_HEADER="[%%ArchitectComp_name%%] Manager: Dashboard"
 [%%COM_ARCHITECTCOMP%%]_JOOMLA_LOGO_DISCLAIMER="This product '[%%ArchitectComp_name%%]' is not affiliated with nor endorsed by the Joomla!&#153; Project. It is not supported or warranted by the Joomla!&#153; Project or Open Source Matters. Any Joomla!&#153; logo is used under a limited license granted by Open Source Matters the trademark holder in the United States and other countries."
+
+[%%COM_ARCHITECTCOMP%%]_VIEW_DASHBOARD_DEFAULT_TITLE="Dashboard"
+[%%COM_ARCHITECTCOMP%%]_VIEW_DASHBOARD_DEFAULT_OPTION="Dashboard option"
+[%%COM_ARCHITECTCOMP%%]_VIEW_DASHBOARD_DEFAULT_DESC="Dashboard desc"
 [%%ENDIF GENERATE_ADMIN_DASHBOARD%%]
