generate.php modificación de validaciones de carácteres $_name_regex. algunas etiquetas i18n +++ definiciones CO regresé install.componentarchitect_mysql.utf8.sql a su versión original, para garantizar su instalación desde cero, en el entendido que manualmente se debe ejecutar admin/sql/updates/mysql/ca.sql

--- a/admin/codetemplates/j_3_4_standard/com_architectcomp_j34standard/admin/language/en-GB/com_architectcomp_es_ES.properties
+++ b/admin/codetemplates/j_3_4_standard/com_architectcomp_j34standard/admin/language/en-GB/com_architectcomp_es_ES.properties
@@ -127,7 +127,7 @@
 [%%ENDIF INCLUDE_DESCRIPTION%%] 
 
 [%%IF INCLUDE_CREATED%%]
-[%%COM_ARCHITECTCOMP%%]_FIELD_CREATED_LABEL="Fecha de creación"
+[%%COM_ARCHITECTCOMP%%]_FIELD_CREATED_LABEL="Fecha de creaci\u00f3n"
 [%%COM_ARCHITECTCOMP%%]_FIELD_VALUE_CREATED="Created Date"
 [%%COM_ARCHITECTCOMP%%]_HEADING_CREATED="Created Date"
 [%%COM_ARCHITECTCOMP%%]_FIELD_CREATED_BY_LABEL="Creado por"
@@ -151,7 +151,7 @@
 [%%ENDIF INCLUDE_CREATED%%]
 
 [%%IF INCLUDE_MODIFIED%%]
-[%%COM_ARCHITECTCOMP%%]_FIELD_MODIFIED_LABEL="Fecha de modificación"
+[%%COM_ARCHITECTCOMP%%]_FIELD_MODIFIED_LABEL="Fecha de modificaci\u00f3n"
 [%%COM_ARCHITECTCOMP%%]_FIELD_VALUE_MODIFIED="Modified Date"
 [%%COM_ARCHITECTCOMP%%]_FIELD_MODIFIED_BY_LABEL="Modificado por"
     [%%IF GENERATE_SITE%%]
@@ -241,7 +241,7 @@
 
 [%%IF INCLUDE_VERSIONS%%]
 [%%COM_ARCHITECTCOMP%%]_FIELDSET_VERSION_CONTROL_LABEL="Opciones del control de versiones"
-[%%COM_ARCHITECTCOMP%%]_FIELDSET_VERSION_CONTROL_DESC="Establezca qué contenido requiere Control de Versiones y el número máximo de revisiones anteriores que pueden ser almacenadas."
+[%%COM_ARCHITECTCOMP%%]_FIELDSET_VERSION_CONTROL_DESC="Establezca qu\u00e9 contenido requiere Control de Versiones y el n\u00famero m\u00e1ximo de revisiones anteriores que pueden ser almacenadas."
 [%%COM_ARCHITECTCOMP%%]_ACTION_VERSION_NOTE="Edit Note"
 [%%COM_ARCHITECTCOMP%%]_ACTION_VERSION_NOTE_COMPONENT_DESC="Allows users in the group add notes for the Version Control."
 [%%ENDIF INCLUDE_VERSIONS%%]
@@ -288,7 +288,7 @@
 
 [%%IF INCLUDE_VERSIONS%%]
 [%%COM_ARCHITECTCOMP%%]_FIELD_VERSION_LABEL="Revision"
-[%%COM_ARCHITECTCOMP%%]_SAVE_HISTORY_OPTIONS_DESC="Si desea guardar automáticamente versiones antiguas de elementos en el componente [%%ArchitectComp_name%%]. Si se establece en Sí, las versiones antiguas de elementos se guardan automáticamente siempre que el historial de guardado específico también se establezca para el tipo de elemento. Al editar, puede restaurar desde una versión anterior del elemento."
+[%%COM_ARCHITECTCOMP%%]_SAVE_HISTORY_OPTIONS_DESC="Si desea guardar autom\u00e1ticamente versiones antiguas de elementos en el componente [%%ArchitectComp_name%%]. Si se establece en S\u00ed, las versiones antiguas de elementos se guardan autom\u00e1ticamente siempre que el historial de guardado espec\u00edfico tambi\u00e9n se establezca para el tipo de elemento. Al editar, puede restaurar desde una versi\u00f3n anterior del elemento."
 [%%ENDIF INCLUDE_VERSIONS%%]
 
 [%%IF GENERATE_PLUGINS_VOTE%%]
